css/nav.css
@import url(animation.css);

nav {
    bottom: 5rem;
    min-height: 15rem;
    overflow: hidden;
    position: fixed;
    top: 5rem;
    user-select: none;
    width: 10rem;
}

nav::before {
    animation: grow-down 1s ease forwards;
    background-color: black;
    content: "";
    position: absolute;
    width: 2px;
}

nav ul {
    animation: move-right .5s ease .5s forwards;
    height: calc(100% - 3rem);
    margin: 1.5rem 0;
    padding-left: 1.5rem;
    position: relative;
    transform: translateX(-100%);
}

nav li > a {
    display: inline-block;
    height: 2rem;
}

nav li > ul {
    margin: 0;
    max-height: 0;
    overflow: hidden;
    transition: .3s ease;
}

nav li a:focus + ul {
    max-height: calc(2rem * var(--list-length));
}

nav li {
    list-style: none;
}

nav > ul > li:last-child {
    bottom: 0;
    position: absolute;
}

nav a {
    color: black;
    position: relative;
    text-decoration: none;
}

nav a::after {
    background-color: black;
    bottom: 0;
    content: "";
    height: 2px;
    left: 0;
    position: absolute;
    transition: width .2s ease;
    width: 0;
}

nav a:hover::after {
    width: 100%;
}

nav + main {
    margin-left: 12rem;
    min-width: 30rem;
}

